tests/invalidTest/typeConvert/test_sint64_2.q
# EXPECT type cannot be converted
def uint16 test(){
  sint64 a = -9223372036854775809     #def & constant num
  return 0
}

